fix to unit-tests for windows and linux

--- a/Dockerfile.units
+++ b/Dockerfile.units
@@ -8,6 +8,9 @@ WORKDIR /usr/src/app
 # Copy the source code and test script into the container
 COPY . /usr/src/app
 
+# After copying files into the container, list the directory contents
+RUN ls -la /usr/src/app
+
 # Make the test script executable
 RUN chmod +x /usr/src/app/test_units.sh
 
@@ -16,4 +19,5 @@ RUN chmod +x /usr/src/app/test_units.sh
 RUN pip install -r requirements.txt
 
 # Run the test script when the container launches
-CMD ["./test_units.sh"]
+CMD ["bash", "./test_units.sh"]
+
