--- a/Dockerfile.pypi
+++ b/Dockerfile.pypi
@@ -1,3 +1,4 @@
+ARG PYTHON_VERSION
 # Use an official Python runtime as a parent image
 FROM python:${PYTHON_VERSION}
 
@@ -5,10 +6,13 @@ FROM python:${PYTHON_VERSION}
 WORKDIR /usr/src/app
 
 # Copy the test script into the container
-COPY test_positiondata.sh /usr/src/app
+COPY test_package_validity.sh /usr/src/app
 
 # Make the test script executable
 RUN chmod +x /usr/src/app/test_package_validity.sh
 
+RUN echo "Package version: ${PACKAGE_VERSION}"
+RUN echo "Python version: ${PYTHON_VERSION}"
+
 # Run the test script when the container launches
-CMD ["./test_package_validity.sh", "${EXPECTED_VERSION}"]
+CMD bash ./test_package_validity.sh ${PACKAGE_VERSION}
